Fix: 100vh issue on mobile

--- a/src/Styles/responsive.module.css
+++ b/src/Styles/responsive.module.css
@@ -42,7 +42,7 @@
   grid-template-rows: auto 1fr auto;
 }
 .Chat {
-  height: calc(100vh - 120px);
+  height: 100%;
   overflow-x: hidden;
   position: relative;
   bottom: 0px;
